--- a/index.html
+++ b/index.html
@@ -1,35 +1,43 @@
+<!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body{
+	background-image: url("https://i.postimg.cc/KzWwHPcq/racing.gif");
+    background-position: center;
+    background-size: cover;
+}
+#myCanvas
+{
+    margin-top: 30px;
+	border-width:10px;
+	background-color: white; 
+	border-style:ridge;
+}
+
+h1,h4
+{
+	color: white !important;
+}
+</style>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-<link rel="stylesheet" type="text/css" href="style.css">
-
-    <script type="text/javascript">
-</script>
-
+	<title>Car Racing</title>
 </head>
-<body class="body_backgorund">
+<body onload="add();">
 
-<div align="center">
-<h1>Paint</h1>
+<center>
+<h1>Car Racing</h1>
+<h1>Game Status : <span id="game_status"></span></h1>
+	<canvas id="myCanvas" width="800" height="600">
+	</canvas>
+<h4>
+	<b class="text-danger">NOTE : </b> IF THE CARES ARE NOT VISIABLE PRESS ANY ARROW KEY
+</h4>
 
-    <canvas id="myCanvas" width="800" height="400"></canvas>
-        <br><br >
-
-<!--Additional activity -->
-        <span>Color - </span>  
-        <input type="text" id="color" value="Pink">
-        
-        <span>Width Of the line  - </span>  
-        <input type="text" id="width_of_line" value ="5">
-        
-        <button onclick="clearArea();">Clear Area</button>
-
-    </div>
-<script src="main.js"></script>
+</center>
 </body>
-</html>
-</head>
 </html>
